# zappy-server

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
server/main/: Game.cpp  main.cpp
server/main/tcp/: Client.cpp  Response.cpp  Select.h  Server.cpp  Socket.cpp
server/main/world/: Point.cpp  Rect.cpp  Square.h  Timeout.cpp  World.h
server/main/world/actors/: ActionInterface.h  Actor.cpp  Actor.h
server/main/world/actors/player/: Inventory.cpp  Inventory.h  Player.cpp  Team.h
server/main/world/actors/player/actions/: BroadcastAction.h  ConnectNbrAction.cpp  ConnectNbrAction.h  ExpelAction.cpp  ExpelAction.h  ForkAction.cpp  IncantationAction.cpp  ManipulateResourceAction.cpp  SeeAction.h  TurnAction.h
server/main/world/actors/spectator/: Spectator.cpp
server/main/world/actors/spectator/actions/: MapContentAction.h  MapSizeAction.h  PlayerInventoryAction.cpp  PlayerInventoryAction.h  PlayerPositionOrientationAction.cpp  PlayerPositionOrientationAction.h  PlayerSpawnAction.cpp  ServerTimeAction.cpp
server/main/world/endpoint/: PlayerRequestHandler.h  SpectatorRequestHandler.cpp
server/test/: gtest.cpp
server/test/game/: GameTest_GetRelativePosition.cpp
server/test/world/: RectTest.cpp
src/main/: CMakeLists.txt  Game.h
src/main/parser/: Parser.cpp  Parser.h
src/main/tcp/: Client.h  Request.cpp  Request.h  RequestHandlerInterface.h  Response.h  Select.cpp  Server.h  Socket.h
src/main/world/: Point.cpp  Point.h  Rect.h  Resource.cpp  Resource.h  Square.cpp  Timeout.h  World.cpp
src/main/world/actors/player/: Player.cpp  Player.h  Team.cpp
src/main/world/actors/player/actions/: BroadcastAction.cpp  ForkAction.h  IncantationAction.h  InventoryAction.cpp  InventoryAction.h  ManipulateResourceAction.h  MoveAction.cpp  MoveAction.h  SeeAction.cpp  TurnAction.cpp
src/main/world/actors/spectator/: Spectator.h
src/main/world/actors/spectator/actions/: MapContentAction.cpp  MapSizeAction.cpp  PlayerLevelAction.cpp  PlayerLevelAction.h  PlayerSpawnAction.h  ServerTimeAction.h  TeamListingAction.cpp  TeamListingAction.h
src/main/world/endpoint/: AbstractRequestHandler.cpp  AbstractRequestHandler.h  PlayerRequestHandler.cpp  SpectatorRequestHandler.h
src/test/: CMakeLists.txt
src/test/game/: GameTest_FindEntitiesTest.cpp
src/test/parser/: ParserTest.cpp
src/test/player/: PlayerTest.cpp
src/test/player/actions/: BroadcastTest.cpp  ExpelTest.cpp  IncantationTest.cpp
